Having issues getting JS to hide/show the images

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
   <div class="search">
-      <input type="search" id="searched" placeholder="Search">
+    <input class="text" type="search" id="searchInput">
   </div>
 
   <div class="gallery">
@@ -79,10 +79,6 @@
 <script src="js/jquery-3.2.1.min.js"></script>
 <script src="js/lightbox.js"></script>
 <script src="js/main.js"></script>
-<script>
-  $('.gallery').lightbox();
-</script>
-
 <script>
     lightbox.option({
       showImageNumberLabel: false,
