--- a/index.html
+++ b/index.html
@@ -9,72 +9,63 @@
 </head>
 <body>
 
+<div class="container">
+        
   <div class="search">
-    <input class="text" type="search" id="searchInput">
+      <input type="text" id="search" name="image_search" placeholder="Search">
   </div>
 
-  <div class="gallery">
-    <div class="row">
-      <a href="photos/01.jpg" data-lightbox="gallery" data-title="I love hay bales. Took this snap on a drive through the countryside past some straw fields.">
+  <div id="gallery">
+
+      <a href="photos/01.jpg" class="active" data-lightbox="gallery" data-title="I love hay bales. Took this snap on a drive through the countryside past some straw fields.">
         <img src="photos/thumbnails/01.jpg" alt="Hay Bales">
       </a>
-    </div>
-    <div class="row">
-      <a href="photos/02.jpg" data-lightbox="gallery" data-title="The lake was so calm today. We had a great view of the snow on the mountains from here.">
+
+      <a href="photos/02.jpg" class="active" data-lightbox="gallery" data-title="The lake was so calm today. We had a great view of the snow on the mountains from here.">
         <img src="photos/thumbnails/02.jpg" alt="Lake">
       </a>
-    </div>
-    <div class="row">
-      <a href="photos/03.jpg" data-lightbox="gallery" data-title="I hiked to the top of the mountain and got this picture of the canyon and trees below.">
+
+      <a href="photos/03.jpg" class="active" data-lightbox="gallery" data-title="I hiked to the top of the mountain and got this picture of the canyon and trees below.">
         <img src="photos/thumbnails/03.jpg" alt="Canyon">
       </a>
-    </div>
-    <div class="row">
-      <a href="photos/04.jpg" data-lightbox="gallery" data-title="It was amazing to see an iceberg up close, it was so cold but didn’t snow today.">
+
+      <a href="photos/04.jpg" class="active" data-lightbox="gallery" data-title="It was amazing to see an iceberg up close, it was so cold but didn’t snow today.">
         <img src="photos/thumbnails/04.jpg" alt="Iceberg">
     </a>
-    </div>
-    <div class="row">
-      <a href="photos/05.jpg" data-lightbox="gallery" data-title="The red cliffs were beautiful. It was really hot in the desert but we did a lot of walking through the canyons.">
+   
+      <a href="photos/05.jpg" class="active" data-lightbox="gallery" data-title="The red cliffs were beautiful. It was really hot in the desert but we did a lot of walking through the canyons.">
         <img src="photos/thumbnails/05.jpg" alt="Desert">
     </a>
-    </div>
-    <div class="row">
-      <a href="photos/06.jpg" data-lightbox="gallery" data-title="Fall is coming, I love when the leaves on the trees start to change color.">
+
+      <a href="photos/06.jpg" class="active" data-lightbox="gallery" data-title="Fall is coming, I love when the leaves on the trees start to change color.">
         <img src="photos/thumbnails/06.jpg" alt="Fall">
     </a>
-    </div>
-    <div class="row">
-      <a href="photos/07.jpg" data-lightbox="gallery" data-title="I drove past this plantation yesterday, everything is so green!">
+
+      <a href="photos/07.jpg" class="active" data-lightbox="gallery" data-title="I drove past this plantation yesterday, everything is so green!">
         <img src="photos/thumbnails/07.jpg" alt="Plantation">
     </a>
-    </div>
-    <div class="row">
-      <a href="photos/08.jpg" data-lightbox="gallery" data-title="My summer vacation to the Oregon Coast. I love the sandy dunes!">
+
+      <a href="photos/08.jpg" class="active" data-lightbox="gallery" data-title="My summer vacation to the Oregon Coast. I love the sandy dunes!">
         <img src="photos/thumbnails/08.jpg" alt="Dunes">
     </a>
-    </div>
-    <div class="row">
-      <a href="photos/09.jpg" data-lightbox="gallery" data-title="We enjoyed a quiet stroll down this countryside lane.">
+
+      <a href="photos/09.jpg" class="active" data-lightbox="gallery" data-title="We enjoyed a quiet stroll down this countryside lane.">
         <img src="photos/thumbnails/09.jpg" alt="Countryside Lane">
     </a>
-    </div>
-    <div class="row">
-      <a href="photos/10.jpg" data-lightbox="gallery" data-title="Sunset at the coast! The sky turned a lovely shade of orange.">
+
+      <a href="photos/10.jpg" class="active" data-lightbox="gallery" data-title="Sunset at the coast! The sky turned a lovely shade of orange.">
         <img src="photos/thumbnails/10.jpg" alt="Sunset">
     </a>
-    </div>
-    <div class="row">
-      <a href="photos/11.jpg" data-lightbox="gallery" data-title="I did a tour of a cave today and the view of the landscape below was breathtaking.">
+
+      <a href="photos/11.jpg" class="active" data-lightbox="gallery" data-title="I did a tour of a cave today and the view of the landscape below was breathtaking.">
         <img src="photos/thumbnails/11.jpg" alt="Cave">
     </a>
-    </div>
-    <div class="row">
-      <a href="photos/12.jpg" data-lightbox="gallery" data-title="I walked through this meadow of bluebells and got a good view of the snow on the mountain before the fog came in.">
+
+      <a href="photos/12.jpg" class="active" data-lightbox="gallery" data-title="I walked through this meadow of bluebells and got a good view of the snow on the mountain before the fog came in.">
         <img src="photos/thumbnails/12.jpg" alt="Bluebells">
     </a>
-    </div>
   </div>
+</div>
 
 <script src="js/jquery-3.2.1.min.js"></script>
 <script src="js/lightbox.js"></script>
@@ -83,7 +74,7 @@
     lightbox.option({
       showImageNumberLabel: false,
       wrapAround: true,
-      maxWidth: 800,
+      maxWidth: 700,
       maxHeight: 500,
       positionFromTop: 150
   })
